Thu Mar  7 15:20:32 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-75.xml
	  tests/general/Makefile.am tests/general/bug-75.*: added a 
	  specific example for bug #72150 in the regression tests

Thu Mar  7 15:17:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in xsltproc/xsltproc.c: fixed bug #71488 in a
	  similar way as #71457

Thu Mar  7 09:41:59 CET 2002 Daniel Veillard <daniel@veillard.com>

	* tests/xmlspec/REC-xml-20001006*.html tests/XSLTMark/xslbench1.out:
	  some HTML meta encoding fixups resulting from fix in libxml2

Mon Mar  4 18:09:48 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c tests/general/bug-63.out: small fixups
	  related to the XPath changes in fixing #61290
	  
Mon Mar  4 12:57:21 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed bug #73363, bad tokenization of
	  pattern

Mon Mar  4 12:01:34 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: patch from Charles Bozeman for the exslt date
	  extension
	* configure.in tests/exslt/Makefile.am tests/exslt/date/*: added
	  the associated regression test provided by Charles

Fri Mar  1 10:17:26 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: Fixed #73088 with the associated patch

Fri Mar  1 10:14:07 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: similar to #72663 and #72658, don't memdump
	  unless compiled explicitely with memory debugging switched on
	* TODO: refreshed a bit

Fri Feb 22 23:44:57 CET 2002 Daniel Veillard <daniel@veillard.com>

	* python/generator.py python/libxslt.c: changes for the 'usual'
	  setup.py to allow building a libxml2-python
	  module based on the same code. The initialization is however
	  different the 2 .so files fo libxml2 and libxslt are identical and
	  they entry point initialize both libraries. this is done to avoid
	  some possible nasty problem since the Python don't merge the maps