@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<out xmlns:my="my://own.uri">17</out>
